--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head>
-<body bgcolor="BLACK">
+<body bgcolor="WHITE">
 <center>
 <h1>Welcome To Sri Lanka</h1>
 <h2>This picture is of Kandy city</h2><br>
